--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -12,6 +12,14 @@ Call for Outreachy community coordinators, mentors, and volunteers
 
 <p>Outreachy interns come from a wide range of backgrounds. Outreachy is open to applicants from underrepresented groups over 18 who fit our <a href="/apply/eligibility/">intern eligibility rules</a>. Interns could be university students, code school graduates, people switching careers, or people coming back to tech after starting a family or other long absence. Most Outreachy interns already have some exposure to using FOSS and technical knowledge, but many of them have not contributed to FOSS communities before. During our six-week application period, potential interns make contributions to the participating FOSS communities, which allows mentors to accurately evaluate their skills.</p>
 
+{% if current_round.has_project_submission_and_approval_deadline_passed %}
+	<p>The current Outreachy internship round is now closed to new participating communities,
+	and is closed to new intern project listings.
+	Coordinators and mentors who missed the deadline are welcome to sign up for the
+	<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">Outreachy announcement list</a>
+	to receive a notification for next round.</p>
+{% endif %}
+
 <p>If you have any questions about Outreachy, you can <a href="/contact/">contact Outreachy organizers or the mentors mailing list</a>.
 
 <h2>Terms used</h2>
@@ -22,7 +30,9 @@ Call for Outreachy community coordinators, mentors, and volunteers
 {% include "home/snippet/roles.html" %}
 
 <h2>Who can participate?</h2>
+{% if not current_round.has_project_submission_and_approval_deadline_passed %}
 <p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers.</p>
+{% endif %}
 
 <p><u>Funding Requirements</u></p>
 <p>FOSS communities need to have secured funding for at least one intern ($6,500). That covers the $5,500 internship stipend, the $500 intern travel stipend, and a $500 accounting fee. The accounting fee covers Outreachy's fiscal non-profit parent organization, Software Freedom Conservancy, handle sponsor invoicing, intern payments, W-9 collection, visa request letters, employment verification letters, student internship credit letters, and tax questions.</p>
@@ -50,7 +60,14 @@ Call for Outreachy community coordinators, mentors, and volunteers
 {% if approved_communities or pending_communities %}
 	<h2>Mentor or Volunteer for a Participating FOSS Community</h2>
 
-	<p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/#mentor">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
+	{% if current_round.has_project_submission_and_approval_deadline_passed %}
+		<p>The current Outreachy internship round is now closed to new intern project listings.
+		Mentors who missed the deadline are welcome to sign up for the
+		<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">Outreachy announcement list</a>
+		to receive a notification for next round. Mentors can still sign up to co-mentor a listed project.</p>
+	{% else %}
+		<p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/#mentor">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
+	{% endif %}
 {% endif %}
 
 {% if approved_communities %}
@@ -63,7 +80,12 @@ Call for Outreachy community coordinators, mentors, and volunteers
 {% endif %}
 
 {% if pending_communities %}
-	<p>The community coordinator has indicated these communities will participate in this Outreachy internship round, but Outreachy organizer approval is still pending. Mentors and volunteers are encouraged to sign up while the community is under review.  If you would like to volunteer or mentor with Outreachy, make sure to <a href="/mentor/#mentor">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
+	{% if current_round.has_project_submission_and_approval_deadline_passed %}
+		<p>The community coordinator had indicated interest in participating in this Outreachy internship round,
+		however, the project listing deadline passed before they could list any mentored projects.</p>
+	{% else %}
+		<p>The community coordinator has indicated these communities will participate in this Outreachy internship round, but Outreachy organizer approval is still pending. Mentors and volunteers are encouraged to sign up while the community is under review.  If you would like to volunteer or mentor with Outreachy, make sure to <a href="/mentor/#mentor">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
+	{% endif %}
 	<ul>
 	{% for c in pending_communities %}
 		<li><a href="{{ c.get_preview_url }}">{{ c.name }}</a></li>
@@ -84,7 +106,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 {% endif %}
 
 <h2>Past Participating FOSS Communities</h2>
-<p>In order for a community to participate in an Outreachy internship round, the community must have at least one coordinator. If you would like to volunteer to be a coordinator, you should <a href="/mentor/">understand the coordinator duties</a> and what <a href="/mentor/community-faq">information they will need to update</a> about the community.</p>
+<p>In order for a community to participate in an Outreachy internship round, the community must have at least one coordinator. If you would like to volunteer to be a coordinator, you should <a href="/mentor/#coordinator">understand the coordinator duties</a> and what <a href="/mentor/community-faq">information they will need to update</a> about the community.</p>
 
 <p>Mentors and volunteers may visit the community page and sign up to receive an email notification when a coordinator signs the community up for this Outreachy round.</p>
 
